added PUT & DELETE with error handling
