# controllers/movies.js
@@ -1,3 +1,4 @@
+const e = require("express");
 const mongodb = require("../db/connect");
 const ObjectId = require("mongodb").ObjectId;
 
@@ -10,12 +11,16 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json("Movie not found in database");
+  }
+
+  const movieId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
     .db("movies")
     .collection("movies")
-    .find({ _id: userId });
+    .find({ _id: movieId });
   result.toArray().then((lists) => {
     res.setHeader("Content-Type", "application/json");
     res.status(200).json(lists[0]);
@@ -31,17 +36,101 @@ const addMovie = async (req, res) => {
     release_year: req.body.release_year,
     box_office: req.body.box_office,
   };
+
+  if (
+    movie.movie_director &&
+    movie.movie_summary &&
+    movie.movie_title &&
+    movie.genre &&
+    movie.release_year &&
+    movie.box_office
+  ) {
+    const response = await mongodb
+      .getDb()
+      .db("movies")
+      .collection("movies")
+      .insertOne(movie);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res
+        .status(500)
+        .json(
+          response.error || "Some error occurred while creating the movie."
+        );
+    }
+  } else {
+    res
+      .status(400)
+      .json("Oops! Look like all fields are required and one was missing");
+  }
+};
+
+const updateMovie = async (req, res) => {
+  const movieId = new ObjectId(req.params.id);
+  const movie = {
+    movie_director: req.body.movie_director,
+    movie_summary: req.body.movie_summary,
+    movie_title: req.body.movie_title,
+    genre: req.body.genre,
+    release_year: req.body.release_year,
+    box_office: req.body.box_office,
+  };
+
+  if (
+    movie.movie_director &&
+    movie.movie_summary &&
+    movie.movie_title &&
+    movie.genre &&
+    movie.release_year &&
+    movie.box_office
+  ) {
+    const response = await mongodb
+      .getDb()
+      .db("movies")
+      .collection("movies")
+      .replaceOne({ _id: movieId }, movie);
+    console.log(response);
+
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      if (!response.length) {
+        res.status(404).json(response.error || "Movie not found in database");
+      } else {
+        res
+          .status(500)
+          .json(
+            response.error || "Oops, something went wrong updating the movie"
+          );
+      }
+    }
+  } else {
+    res
+      .status(500)
+      .json("Oops! Look like all fields are required and one was missing");
+  }
+};
+
+const deleteMovie = async (req, res) => {
+  const movieId = new ObjectId(req.params.id);
   const response = await mongodb
     .getDb()
     .db("movies")
     .collection("movies")
-    .insertOne(movie);
-  if (response.acknowledged) {
-    res.status(201).json(response);
+    .remove({ _id: movieId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(204).send();
   } else {
+    if (!response.length) {
+      res.status(404).json(response.error || "Movie not found in database");
+    }
     res
       .status(500)
-      .json(response.error || "Some error occurred while creating the movie.");
+      .json(
+        response.error || "Some error occurred while deleting the contact."
+      );
   }
 };
 
@@ -49,4 +138,6 @@ module.exports = {
   getAll,
   getSingle,
   addMovie,
+  updateMovie,
+  deleteMovie,
 };
